# word-code-gen

./: .gitignore  Dockerfile  Makefile  README.md  build_and_push.sh  code.docx  converted.docx  pyproject.toml  reference.docx  requirements.txt
wordcodegen/: __main__.py  codeloader.py  convert.py  decorate.py  finder.py  model.py
