[tool.poetry]
name = "wordcodegen"
version = "0.4.0"
description = ""
authors = ["Sergey Ivanychev <sergeyivanychev@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.12"
python-docx = "^1.1.2"
click = "^8.1.3"
pandoc = "^2.4"
loguru = "^0.7.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
isort = "^5.10.1"
pycln = "^2.1.1"
pyupgrade = "^3.1.0"
yq = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
