[project]
name = "wordcodegen"
version = "0.4.0"
description = ""
authors = [{ name = "Sergey Ivanychev", email = "sergeyivanychev@gmail.com" }]
requires-python = ">=3.10,<=3.12"
dependencies = [
    "python-docx>=1.1.2,<2",
    "click>=8.1.3,<9",
    "pandoc~=2.4",
    "loguru>=0.7.2,<0.8",
]

[dependency-groups]
dev = [
    "black>=22.10.0,<23",
    "isort>=5.10.1,<6",
    "pycln>=2.1.1,<3",
    "pyupgrade>=3.1.0,<4",
    "yq>=3.1.0,<4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
